# coderadar

./: .coverage  .gitignore  README.md  pyproject.toml  setup.py
coderadar/: __main__.py  _functions.py  coderadar.py  flake8.py  gitlab.py  pylint.py  pytest.py  report.py
coderadar/templates/: report.html  report.txt
coderadar/tests/: test_coderadar.py
