[build-system]
requires = ["setuptools>=42", 
            "wheel",
            "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "coderadar"
version = "0.0.1"
description = "Summarizing the code metrics of your project from pytest-cov, pylint and flake8."
readme = "README.md"
authors = [{ name = "Carsten König", email = "coderadar@carsten-koenig.de" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python"
]
keywords = ["lint", "metrics", "code quality"]
dependencies = ["pytest",
                "pytest-cov",
                "pylint",
                "flake8"
]
requires-python = ">=2.7"

[project.urls]
Homepage = "https://github.com/ck2go/coderadar"

[project.scripts]
coderadar = "coderadar.coderadar:main"
