[build-system]
requires = ["setuptools>=42", 
            "wheel",
            "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "CodeRadar"
version = "0.3.1"
description = "Identifying the highest threats to your code quality by analyzing code metrics of your project using pytest and pylint."
readme = "README.md"
authors = [{ name = "Carsten König" }]
license = { text = "MIT License" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.7"
]
keywords = ["lint", "metrics", "code quality"]
dependencies = ["pytest",
                "pytest-cov",
                "pylint",
                "flake8"
]
requires-python = ">=2.7"

[project.urls]
Homepage = "https://gitlab.com/ck2go/coderadar"

[project.scripts]
coderadar = "coderadar.__main__:main"
